--- a/Confort-RE/styles/style.css
+++ b/Confort-RE/styles/style.css
@@ -1946,13 +1946,13 @@
   padding-left: 2rem;
 }
 
-#footer,
-nav {
+.gallery-footer,
+.gallery-nav {
   display: none !important;
 }
 @media (max-width: 767.9px) {
-  #footer,
-  nav {
+  .gallery-footer,
+  .gallery-nav {
     display: block !important;
     width: 100% !important;
   }
